# libpointmatcherPythonWrapper

./: CMakeLists.txt  libpointmatcherPythonWrapper.cpp  setup_extend_libpointmatcher_wrapper.py  test.py  train_icp_align_rotated_templates_with_new_lib.py
